messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: django-messaging-app-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: <your-domain>
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: django-messaging-app-service
                            port:
                                number: 80
                  - path: /api/
                    pathType: Prefix
                    backend:
                        service:
                            name: django-messaging-app-service
                            port:
                                number: 80
